--- a/Amadeus Notebook.ipynb
+++ b/Amadeus Notebook.ipynb
@@ -54,6 +54,31 @@
     "for f in files:\n",
     "    toHDF(f)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from multiprocessing import Pool\n",
+    "import time \n",
+    "\n",
+    "# ex 1\n",
+    "for f in files:\n",
+    "    store = pd.HDFStore(f[\"filename\"].split(\".\")[0] + '.h5')\n",
+    "    print \"%s has %d lines\" % (f[\"filename\"].split(\".\")[0], store.get_storer('data').nrows)"
+   ]
   }
  ],
  "metadata": {
