exercise 2. Top Airports

--- a/Amadeus Notebook.ipynb
+++ b/Amadeus Notebook.ipynb
@@ -78,6 +78,51 @@
     "    store = pd.HDFStore(f[\"filename\"].split(\".\")[0] + '.h5')\n",
     "    print \"%s has %d lines\" % (f[\"filename\"].split(\".\")[0], store.get_storer('data').nrows)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import time \n",
+    "import os.path\n",
+    "from GeoBases import GeoBase\n",
+    "\n",
+    "geo_o = GeoBase(data='ori_por', verbose=False)   \n",
+    "\n",
+    "def getTopAirports():\n",
+    "    store = pd.HDFStore('bookings.h5')\n",
+    "    df = store.select('data')\n",
+    "    grouped_chunks = df.groupby('arr_port').sum()\n",
+    "    final_dataframe = grouped_chunks.groupby(level=0).sum().sort('pax',ascending=0)\n",
+    "    final_dataframe.to_hdf('top_airports.h5', 'data',format='table')\n",
+    "    return final_dataframe\n",
+    "\n",
+    "def getTopNAirports(n):\n",
+    "    if os.path.isfile('top_airports.h5'):\n",
+    "        # already computed. Read from disk\n",
+    "        df = pd.read_hdf('top_airports.h5', 'data', start=0, stop=n)\n",
+    "        df.index = df.index.map(lambda code: geo_o.get(code.strip(), 'name'))\n",
+    "        return df\n",
+    "    else:\n",
+    "        # compute\n",
+    "        df = getTopAirports()[0:n]\n",
+    "        df.index = df.index.map(lambda code: geo_o.get(code.strip(), 'name'))\n",
+    "        return df\n",
+    "\n",
+    "getTopNAirports(10)"
+   ]
   }
  ],
  "metadata": {
