exercise 3. Airport plots

--- a/Amadeus Notebook.ipynb
+++ b/Amadeus Notebook.ipynb
@@ -123,6 +123,47 @@
     "\n",
     "getTopNAirports(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "airport_codes = ['AGP', 'MAD', 'BCN']\n",
+    "airport_names = ['Malaga', 'Madrid', 'Barcellona']\n",
+    "# read the data and extract the month for the selected airports\n",
+    "chunks = []\n",
+    "\n",
+    "\n",
+    "for c in pd.read_csv('searches.csv', sep=\"^\", chunksize=50000):\n",
+    "    x = c[c[\"Destination\"].isin(airport_codes)]\n",
+    "    x.ix[:, \"Month\"] = x[\"Date\"].apply(lambda x : x.split(\"-\")[1])\n",
+    "    chunks.append( x[[\"Destination\", \"Month\"]].groupby(['Destination', 'Month']).size() )\n",
+    "final_dataframe = pd.DataFrame(pd.concat(chunks, axis=1).sum(axis=1))\n",
+    "plt.ylabel('nr. of passengers')\n",
+    "plt.xlabel('months')\n",
+    "plt.xticks(xrange(0,12), xrange(1,12))\n",
+    "plt.title('Monthly searches for Malaga, Madrid, Barcelona')\n",
+    "plt.hold(True)\n",
+    "for i, airport in enumerate(airport_codes):\n",
+    "    plt.plot(final_dataframe.xs(airport))\n",
+    "plt.hold(False)\n",
+    "plt.legend(airport_names)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
