Exercise 3. Match searches and bookings

--- a/Amadeus Notebook.ipynb
+++ b/Amadeus Notebook.ipynb
@@ -164,6 +164,69 @@
     "plt.legend(airport_names)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import itertools\n",
+    "#match searches.csv (Origin, Destination, Date, Seg1Departure) \n",
+    "#match bookings.csv  (dep_port, arr_port, cre_date, brd_time)\n",
+    "\n",
+    "# get tot bookings for each pair Origin, Destination\n",
+    "bookings_df = pd.read_hdf('bookings.h5', 'data')\n",
+    "bookings_df.ix[:, 'arr_port']=bookings_df.ix[:, 'arr_port'].apply(lambda x: x.strip())\n",
+    "bookings_df.ix[:, 'dep_port']=bookings_df.ix[:, 'dep_port'].apply(lambda x: x.strip())\n",
+    "grouped_bookings = pd.DataFrame(bookings_df[['arr_port', 'dep_port']].groupby(['arr_port', 'dep_port']).size())\n",
+    "grouped_bookings.columns = ['count']\n",
+    "grouped_bookings.index.names = ['Origin', 'Destination']\n",
+    "grouped_bookings=grouped_bookings.reset_index()\n",
+    "# get groups for each pair Origin, Destination within the searches.csv\n",
+    "searches_df = pd.read_hdf('searches.h5', 'data').reset_index(drop=True)\n",
+    "searches_gp = searches_df.groupby(['Origin', 'Destination'])\n",
+    "searches_gp_indices = searches_gp.indices\n",
+    "# count successfull bookings and get indices for each group\n",
+    "searches_df['count'] = 0\n",
+    "searches_df['indices'] = ''\n",
+    "grouped_searches = searches_df.groupby(['Origin', 'Destination'], sort=False).agg({'count': np.size, 'indices': lambda x : [x.index.tolist()]})\n",
+    "grouped_searches=grouped_searches.reset_index()\n",
+    "grouped_searches\n",
+    "# merge\n",
+    "merged = pd.merge(grouped_bookings, grouped_searches, on=['Origin','Destination'])\n",
+    "merged['count_min'] = merged[['count_x', 'count_y']].min(axis=1)\n",
+    "merged.drop(['count_x', 'count_y'], axis=1, inplace=True)\n",
+    "# clip to the list to count_min\n",
+    "def ciao(x):\n",
+    "    return [x['indices'][0][1:x['count_min']]]\n",
+    "merged['indices'] = merged.apply(lambda x: ciao(x), axis=1)\n",
+    "# flatten list of lists. Itertools has been called twice because the list is nested \n",
+    "successful_searches_idx = merged['indices'].tolist()\n",
+    "successful_searches_idx = list(itertools.chain.from_iterable(successful_searches_idx))\n",
+    "successful_searches_idx = list(itertools.chain.from_iterable(successful_searches_idx))\n",
+    "# now save the results in the csv\n",
+    "chunk_id = 0\n",
+    "chunk_size = 50000\n",
+    "for dataframe_chunk in pd.read_csv('searches.csv', sep='^', chunksize=50000):\n",
+    "    dataframe_chunk['successful_booking'] = 0\n",
+    "    dataframe_chunk.reset_index(drop=True)\n",
+    "    dataframe_chunk.index = [x+chunk_size*chunk_id for x in dataframe_chunk.index]\n",
+    "    dataframe_chunk.loc[dataframe_chunk[dataframe_chunk.index.isin(successful_searches_idx)].index, 'successful_booking'] = 1    \n",
+    "    chunk_id += 1\n",
+    "    dataframe_chunk.to_csv('matched_searches.csv', sep='^', index=False, mode='a', chunksize=chunk_size)"
+   ]
   }
  ],
  "metadata": {
