--- a/Amadeus Notebook.ipynb
+++ b/Amadeus Notebook.ipynb
@@ -169,7 +169,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise 4"
+    "Exercise 4\n",
+    "\n",
+    "We could match the following fields in searches.csv (Origin, Destination, Date, Seg1Departure), with (dep_port, arr_port, cre_date, brd_time) in bookings.csv, provided that the search 'Date' matches 'cre_date' (which could probably be the booking creation date) and 'Seg1Departure' could be the same with respect to 'brd_time' (the boarding time (?)).\n",
+    "In the example I used only Origin and Destination, but adding these two params provided that the above mentioned interpretation is correct simply requires to modify two lines of code."
    ]
   },
   {
@@ -226,6 +229,40 @@
     "    dataframe_chunk.loc[dataframe_chunk[dataframe_chunk.index.isin(successful_searches_idx)].index, 'successful_booking'] = 1    \n",
     "    chunk_id += 1\n",
     "    dataframe_chunk.to_csv('matched_searches.csv', sep='^', index=False, mode='a', chunksize=chunk_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bonus Exercise:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To test it run the following command:\n",
+    "curl -XGET localhost:5000/api/airport/top/20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from flask import Flask\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "@app.route('/api/airport/top/<int:N>')\n",
+    "def show_top_airports(N):\n",
+    "    return getTopNAirports(N).to_json()\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run()"
    ]
   }
  ],
